[gd_scene load_steps=9 format=2]

[ext_resource path="res://asset/UI/button/quit_click.png" type="Texture" id=1]
[ext_resource path="res://asset/UI/button/main_menu_btn.png" type="Texture" id=2]
[ext_resource path="res://asset/UI/button/restart_click.png" type="Texture" id=3]
[ext_resource path="res://src/UserInterface/GameOver/GameOver.gd" type="Script" id=4]
[ext_resource path="res://asset/UI/button/main_menu_click.png" type="Texture" id=5]
[ext_resource path="res://asset/UI/button/quit_btn.png" type="Texture" id=6]
[ext_resource path="res://asset/UI/button/restrart_btn.png" type="Texture" id=7]
[ext_resource path="res://asset/UI/GameOver/gameover.png" type="Texture" id=8]

[node name="GameOver" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LayerOverlay" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.462745 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="LayerOverlay"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -191.0
margin_top = 26.9391
margin_right = 191.0
margin_bottom = 131.939
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="LayerOverlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -57.5
margin_top = -71.0
margin_right = 57.5
margin_bottom = 71.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="TextureButton" parent="LayerOverlay/VBoxContainer"]
margin_right = 115.0
margin_bottom = 44.0
shortcut_in_tooltip = false
action_mode = 0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 7 )

[node name="MainMenu" type="TextureButton" parent="LayerOverlay/VBoxContainer"]
margin_top = 48.0
margin_right = 115.0
margin_bottom = 93.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 5 )

[node name="Quit" type="TextureButton" parent="LayerOverlay/VBoxContainer"]
margin_top = 97.0
margin_right = 115.0
margin_bottom = 142.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 1 )
[connection signal="pressed" from="LayerOverlay/VBoxContainer/Restart" to="." method="_on_PlayAgain_pressed"]
[connection signal="pressed" from="LayerOverlay/VBoxContainer/MainMenu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="LayerOverlay/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
